gyro done others have skeletons

--- a/index.html
+++ b/index.html
@@ -10,21 +10,13 @@
 
 <h1>Odin Recipes</h1>
 
-
+<ul>
 <a href="recipes/lasagna.html">Lasagna Recipe</a>
-
-<img src="https://www.allrecipes.com/thmb/BKa1OqunLWMkCDJm_3LtxF_Pn88=/282x188/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/23600-worlds-best-lasagna-DDMFS-4x3-1196-24c5401652934ffb96d3d94bc9fbe2d7.jpg" alt="Cooked lasagna">
-
-<h5>The perfect lasagna</h5>
-
-<p>Lasagna is an amazing 
-    dish that makes you picture yourself in italy enjoying 
-    a nice day on the town. 
-    today i am going to teach you how rto cook it well.</p>
+<a href="recipes/gyro.html">Gyro recipe</a>
 
 
 
-
+</ul>
     
 </body>
 </html>
